k8s-do/geonames-sparql/geonames-sparql-ingress.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geonames-sparql
spec:
  ingressClassName: nginx
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /geonames
            pathType: Prefix
            backend:
              service:
                name: geonames-sparql
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geonames-sparql-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://demo.netwerkdigitaalerfgoed.nl/geonames/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /geonames2(/|$)(.*)
            pathType: ImplementationSpecific
            backend: # unused, but each rule must have a backend
              service:
                name: geonames-sparql
                port:
                  number: 80
---
